--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ hr{
 }
 
 .container{
-    width: 100%;
-    height: 400px;
+    width: 90%;
+    height: auto;
     margin: 0 auto;
 }
 
@@ -25,6 +25,14 @@ hr{
     width: 100%;
     height: 7%;
     background-color: black;
+}
+
+.banner{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+
 }
 
 .columns{
@@ -44,17 +52,24 @@ hr{
 
 .col1_left p{
     text-align: right;
-    margin-right: 1em;;
+    margin-right: 1em;
+    font-weight: bold;
 }
 
 .col2_rigth{
     width: 49%;
     height: auto;
     float: left;
-
 }
 
 .col2_rigth p{
     text-align: right;
     margin-left: 1em;;
+}
+
+.img{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 8%;
 }
